--- a/AdminLTE-custom/eventcalendar.html
+++ b/AdminLTE-custom/eventcalendar.html
@@ -200,6 +200,14 @@
 		            </span>
 	          	</a>
 	        </li>
+	        <li class="active">
+	          	<a href="pipeline_v2.html">
+		            <i class="fa fa-tasks"></i> <span>PipeLines v2</span>
+		            <span class="pull-right-container">
+		              	<small class="label pull-right bg-red">3</small>
+		            </span>
+	          	</a>
+	        </li>
 	        <li class="header">Settings</li>
 	        <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Logs</span></a></li>
 	      </ul>
