--- a/AdminLTE-custom/pipeline_v2.html
+++ b/AdminLTE-custom/pipeline_v2.html
@@ -292,6 +292,9 @@
 		    				</div>
 		    				<div class="table-item__box custom-wrap connectedSortable" id="sortable1">
 		    					<div class="box-content custom-wrap box-content__13 custom-default bg-green">
+		    						<div class="background-image custom-wrap">
+		    							<img src="public/template_admin/img/background/background-1.jpg">
+		    						</div>
 		    						<div class="table-item__box-info">
 			    						<div class="id_create"><span><i class="fa fa-user-circle-o"></i> <span class="contact_deal">Admin</span></span></div>
 			    						<div class="name_info" data-toggle="modal" data-target="#edit-deal" data-stage_id="13">Giao việc 13</div>
@@ -305,6 +308,9 @@
 			    					</div>
 		    					</div>
 		    					<div class="box-content custom-wrap box-content__113 custom-default bg-red">
+		    						<div class="background-image custom-wrap">
+		    							<img src="public/template_admin/img/background/background-1.jpg">
+		    						</div>
 		    						<div class="table-item__box-info">
 			    						<div class="id_create"><span><i class="fa fa-user-circle-o"></i> <span class="contact_deal">Admin</span></span></div>
 			    						<div class="name_info" data-toggle="modal" data-target="#edit-deal" data-stage_id="113">Giao việc 113</div>
@@ -318,6 +324,9 @@
 			    					</div>
 		    					</div>
 		    					<div class="box-content custom-wrap box-content__013 custom-default bg-yellow">
+		    						<div class="background-image custom-wrap">
+		    							<img src="public/template_admin/img/background/background-1.jpg">
+		    						</div>
 		    						<div class="table-item__box-info">
 			    						<div class="id_create"><span><i class="fa fa-user-circle-o"></i> <span class="contact_deal">Admin</span></span></div>
 			    						<div class="name_info" data-toggle="modal" data-target="#edit-deal" data-stage_id="013">Giao việc 013</div>
@@ -362,6 +371,9 @@
 		    				</div>
 		    				<div class="table-item__box custom-wrap connectedSortable" id="sortable2">
 		    					<div class="box-content custom-wrap box-content__022 custom-default bg-green">
+		    						<div class="background-image custom-wrap">
+		    							<img src="public/template_admin/img/background/background-1.jpg">
+		    						</div>
 		    						<div class="table-item__box-info">
 			    						<div class="id_create"><span><i class="fa fa-user-circle-o"></i> <span class="contact_deal">Admin</span></span></div>
 			    						<div class="name_info" data-toggle="modal" data-target="#edit-deal" data-stage_id="022">Giao việc 022</div>
@@ -375,6 +387,9 @@
 			    					</div>
 		    					</div>
 		    					<div class="box-content custom-wrap box-content__22 custom-default bg-green">
+		    						<div class="background-image custom-wrap">
+		    							<img src="public/template_admin/img/background/background-1.jpg">
+		    						</div>
 		    						<div class="table-item__box-info">
 			    						<div class="id_create"><span><i class="fa fa-user-circle-o"></i> <span class="contact_deal">Admin</span></span></div>
 			    						<div class="name_info" data-toggle="modal" data-target="#edit-deal" data-stage_id="22">Giao việc 22</div>
@@ -419,6 +434,9 @@
 		    				</div>
 		    				<div class="table-item__box custom-wrap connectedSortable" id="sortable3">
 		    					<div class="box-content custom-wrap box-content__033 custom-default bg-green">
+		    						<div class="background-image custom-wrap">
+		    							<img src="public/template_admin/img/background/background-1.jpg">
+		    						</div>
 		    						<div class="table-item__box-info">
 			    						<div class="id_create"><span><i class="fa fa-user-circle-o"></i> <span class="contact_deal">Admin</span></span></div>
 			    						<div class="name_info" data-toggle="modal" data-target="#edit-deal" data-stage_id="033">Giao việc 033</div>
@@ -432,6 +450,9 @@
 			    					</div>
 		    					</div>
 		    					<div class="box-content custom-wrap box-content__33 custom-default bg-red">
+		    						<div class="background-image custom-wrap">
+		    							<img src="public/template_admin/img/background/background-1.jpg">
+		    						</div>
 		    						<div class="table-item__box-info">
 			    						<div class="id_create"><span><i class="fa fa-user-circle-o"></i> <span class="contact_deal">Admin</span></span></div>
 			    						<div class="name_info" data-toggle="modal" data-target="#edit-deal" data-stage_id="33">Giao việc 33</div>
@@ -445,6 +466,9 @@
 			    					</div>
 		    					</div>
 		    					<div class="box-content custom-wrap box-content__123 custom-default bg-yellow">
+		    						<div class="background-image custom-wrap">
+		    							<img src="public/template_admin/img/background/background-1.jpg">
+		    						</div>
 		    						<div class="table-item__box-info">
 			    						<div class="id_create"><span><i class="fa fa-user-circle-o"></i> <span class="contact_deal">Admin</span></span></div>
 			    						<div class="name_info" data-toggle="modal" data-target="#edit-deal" data-stage_id="123">Giao việc 123</div>
@@ -535,6 +559,11 @@
 										<textarea id="tt7" class="form-control notes shadow-none" name="notes" placeholder="Add a note" rows="3"></textarea>
 										<span><label for="tt7">Notes</label></span>
 									</div>
+									<div class="form-group">
+					                  	<label for="exampleInputFile">Chọn ảnh</label>
+					                  	<input type="file" id="exampleInputFile">
+					                  	<p class="help-block">Box hiển thị ảnh upload lên</p>
+					                </div>
 					          	</div>
 					          	<div class="modal-footer">
 					            	<a href="javascript:;" class="btn" data-dismiss="modal" aria-label="Close">Cancel</a>
